# ETLNotifier

./: .env.example  .gitignore  Dockerfile  cache.json  pyproject.toml  queries.yml  readme.md  requirements.txt  setup.py  teams_etl_notifier.py
scripts/: check_mongo.py  setup_env.sh  start.sh
src/etl_notifier/: __init__.py  config_loader.py  main.py  notifier.py
src/etl_notifier/models/: __init__.py  notification_record.py
src/etl_notifier/models/records/: base_notification_record.py  rebacentral_notification_record.py
src/etl_notifier/services/: config_loader.py
src/etl_notifier/services/cache/: __init__.py  base.py  exceptions.py  json_cache.py
src/etl_notifier/services/data_source/: __init__.py  azure_sql_db.py  base.py  database.py
src/etl_notifier/services/notification/: __init__.py  formatter.py  mongo_strategy.py  strategy.py  teams_strategy.py
src/etl_notifier/strategies/cache/: __init__.py  base_cache.py  exceptions.py  json_cache.py
tests/: conftest.py  test_etlnotifier.py
tests/test_models/: test_notification_record.py
tests/test_models/test_records/: test_rebacentral_notification_record.py
tests/test_services/: test_config_loader.py
tests/test_services/test_cache/: test_json_cache.py
tests/test_services/test_data_source/: test_database.py
tests/test_services/test_notification/: test_formatter.py  test_mongo_strategy.py  test_teams_strategy.py
tests/test_strategies/test_cache/: test_json_cache.py
tests/test_strategies/test_data_source/: test_database_source.py  test_rebacentral_db_source.py
(+10 files in other folders)
